add_subdirectory(image)
add_subdirectory(nbt)

set(c10t_SOURCES level.cpp)
set(c10t_SOURCES ${c10t_SOURCES} algorithm.cpp)
set(c10t_SOURCES ${c10t_SOURCES} blocks.cpp)
set(c10t_SOURCES ${c10t_SOURCES} players.cpp)
set(c10t_SOURCES ${c10t_SOURCES} world.cpp)
set(c10t_SOURCES ${c10t_SOURCES} fileutils.cpp)
set(c10t_SOURCES ${c10t_SOURCES} utf8.cpp)
set(c10t_SOURCES ${c10t_SOURCES} warps.cpp)
set(c10t_SOURCES ${c10t_SOURCES} mc/utils.cpp)
set(c10t_SOURCES ${c10t_SOURCES} engine/topdown_engine.cpp)
set(c10t_SOURCES ${c10t_SOURCES} engine/oblique_engine.cpp)
set(c10t_SOURCES ${c10t_SOURCES} engine/obliqueangle_engine.cpp)
set(c10t_SOURCES ${c10t_SOURCES} engine/isometric_engine.cpp)

set(c10t_LIBRARIES ${c10t_LIBRARIES} c10t-image c10t-nbt)

add_executable(c10t main.cpp ${c10t_SOURCES})
add_executable(c10t-debug EXCLUDE_FROM_ALL main.cpp ${c10t_SOURCES})
add_executable(nbt-inspect EXCLUDE_FROM_ALL nbt/nbt_inspect.cpp nbt/nbt.cpp)

set_target_properties(c10t PROPERTIES COMPILE_FLAGS "-O3 -Wall")
set_target_properties(c10t-debug PROPERTIES COMPILE_FLAGS "-Wall -pedantic -g")
set_target_properties(nbt-inspect PROPERTIES COMPILE_FLAGS "-O3 -Wall -pedantic -g")

target_link_libraries(c10t ${c10t_LIBRARIES})
target_link_libraries(c10t-debug ${c10t_LIBRARIES})
target_link_libraries(nbt-inspect ${ZLIB_LIBRARIES})
