add_subdirectory(image)
add_subdirectory(nbt)
add_subdirectory(mc)

set(c10t_SOURCES algorithm.cpp)
set(c10t_SOURCES ${c10t_SOURCES} players.cpp)
set(c10t_SOURCES ${c10t_SOURCES} fileutils.cpp)
set(c10t_SOURCES ${c10t_SOURCES} utf8.cpp)
set(c10t_SOURCES ${c10t_SOURCES} altitude_graph.cpp)
set(c10t_SOURCES ${c10t_SOURCES} warps.cpp)
set(c10t_SOURCES ${c10t_SOURCES} text.cpp)
set(c10t_SOURCES ${c10t_SOURCES} engine/topdown_engine.cpp)
set(c10t_SOURCES ${c10t_SOURCES} engine/oblique_engine.cpp)
set(c10t_SOURCES ${c10t_SOURCES} engine/obliqueangle_engine.cpp)
set(c10t_SOURCES ${c10t_SOURCES} engine/isometric_engine.cpp)
set(c10t_SOURCES ${c10t_SOURCES} engine/fatiso_engine.cpp)

set(c10t_LIBRARIES ${c10t_LIBRARIES} c10t-image c10t-nbt c10t-mc)

add_executable(c10t main.cpp main_utils.cpp ${c10t_SOURCES})
add_executable(c10t-debug EXCLUDE_FROM_ALL main.cpp main_utils.cpp ${c10t_SOURCES})
add_executable(nbt-inspect EXCLUDE_FROM_ALL nbt/nbt_inspect.cpp nbt/nbt.cpp)
add_executable(region-inspect EXCLUDE_FROM_ALL mc/region_inspect.cpp)

set_target_properties(c10t PROPERTIES COMPILE_FLAGS "-O3 -Wall")
set_target_properties(c10t-debug PROPERTIES COMPILE_FLAGS "-Wall -pedantic -g")
set_target_properties(nbt-inspect PROPERTIES COMPILE_FLAGS "-O3 -Wall -pedantic -g")

target_link_libraries(c10t ${c10t_LIBRARIES})
target_link_libraries(c10t-debug ${c10t_LIBRARIES})
target_link_libraries(nbt-inspect ${ZLIB_LIBRARIES})
target_link_libraries(region-inspect ${c10t_LIBRARIES})
